Closed Bug 500224 Opened 15 years ago Closed 15 years ago

Crash [@ nsFocusManager::GetCommonAncestor] with onfocus removing window and onload focus

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: enndeakin)

References

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(2 files, 1 obsolete file)

Attached file testcase
See testcase, which crashes current trunk build after a few reloads.

The iframe content is this:
<html>
<body onfocus="window.frameElement.parentNode.removeChild(window.frameElement)" onunload="document.documentElement.focus()">
</body>
</html>

http://crash-stats.mozilla.com/report/index/7d72d5a5-ab1e-47e8-bb3a-7bc482090624?p=1
0  	xul.dll  	nsFocusManager::GetCommonAncestor  	 dom/base/nsFocusManager.cpp:1129
1 	xul.dll 	nsFocusManager::SetFocusInner 	dom/base/nsFocusManager.cpp:1050
Attached patch check the in unload state (obsolete) — Splinter Review
Need to work out how to get a test for this.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #385155 - Flags: review?(bzbarsky)
Comment on attachment 385155 [details] [diff] [review]
check the in unload state

Well I can't figure out how to create a test that fails without the patch and passes with it.
Comment on attachment 385155 [details] [diff] [review]
check the in unload state

Don't you need to check both booleans?
Attached patch do both checksSplinter Review
Attachment #385155 - Attachment is obsolete: true
Attachment #386977 - Flags: review?(bzbarsky)
Attachment #385155 - Flags: review?(bzbarsky)
Attachment #386977 - Flags: review?(bzbarsky) → review+
http://hg.mozilla.org/mozilla-central/rev/fc3f519cfd44
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsFocusManager::GetCommonAncestor]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: