Bug 500224, don't focus elements during unload events, r=bz